css "real" name-spacing added; html structure modified (better paragraph support); info-date section finished; minor improvements and fixes

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -57,7 +57,8 @@ $info-intro-title-bottom-distance : 30px;
 
 
 /*----- COLORS ---------------------------------------------------------------*/
-$text-base-color : #512417;
+$text-base-color  : #512417;
+$text-other-color : #F0761D;
 
 $header-color-10 : #433934;
 $header-color-20 : #FEF6DF;
